0.22.9	UNRELEASED

 * In dulwich.porcelain docstring, list functions by their Python identifiers.
   (Marnanel Thurman)

 * cli: add basic branch management commands (James Addison, #1514)

 * Fix wheels workflow. (Jelmer Vernooĳ)

 * ``Config.set`` replaces values by default, ``Config.add``
   appends them. (Jelmer Vernooĳ, #1545)

 * Support ``core.sshCommand`` setting.
   (Jelmer Vernooĳ, #1548)

 * Bump PyO3 to 0.25. (Jelmer Vernooĳ)

 * In ``SubprocessClient`` time out after 60 seconds
   when the subprocess hasn't terminated when closing
   the channel. (Jelmer Vernooĳ)

 * Add type hint for ``dulwich.client.get_ssh_vendor``.
   (Jelmer Vernooĳ, #1471)

 * Add basic merge command. (Jelmer Vernooĳ)

 * Update working tree in pull. (Jelmer Vernooĳ, #452)

 * Support switching branch in a way that updates
   working tree. (Jelmer Vernooĳ, #576)

 * Fix typing for ``dulwich.client`` methods that take repositories.
   (Jelmer Vernooĳ, #1521)

 * Fix handling of casing of subsection names in config.
   (Jelmer Vernooĳ, #1183)

 * Update working tree in pull. (Jelmer Vernooĳ, #452)

0.22.8	2025-03-02

 * Allow passing in plain strings to ``dulwich.porcelain.tag_create``
   (Jelmer Vernooĳ, #1499)

 * Bump PyO3 to 0.23.5. (Jelmer Vernooĳ)

 * Add sparse checkout cone mode support (Louis Maddox, #1497)

 * Add skip-worktree support. (Louis Maddox)

 * Add "index.skipHash" option support. (Jan Rűegg)

 * Repo docstring improvements. (Marnanel Thurman)

0.22.7	2024-12-19

 * Fix serializing of commits with empty commit messages.
   (Castedo Ellerman, #1429)

0.22.6	2024-11-16

 * ``ObjectStore.iter_prefix``: fix handling of missing
   loose object directories. (Jelmer Vernooĳ)

 * Reject invalid refcontainer values (not 40 characters or symref).
   (Arun Babu Neelicattu)

 * Add type hints to various functions. (Castedo Ellerman)

0.22.5	2024-11-07

 * Drop support for Python 3.8. (Jelmer Vernooĳ)

 * Fix refspec handling in porcelain.pull. (Jelmer Vernooĳ)
